publish page two of movers company

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Movers landing page</title>
         <link rel="stylesheet" href="./Project Assets/index.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> 
     </head>
     <body>   
         
@@ -17,10 +18,12 @@
                 <ul>
                     <li>Home</li>
                     <li>About us</li>
-                    <li>Movers</li>
+                    <li>
+                        <a  href="./Project Assets/pages/index.html">movers</a>
+                    </li>
                     <li>Contact us</li>
-                    <li><button type="sub">Login</button></li>
-                    <li><button type="key">Login</button></li>
+                    <li><div class="sub"><span style="color:black;">Login</span></div></li>
+                    <li><div class="log-key"><span style="color:yellow;">Login</span></div></li>
                 </ul>
             </div>
         </nav>
@@ -37,7 +40,7 @@
                 <div class="motiv">
                     <h3>Cut the hustle</h3>
                     <p>In  this  current tough  economic situations, living is  already a  hustle. Why then should you  worry  about how  you  should  move to  live  better</p> 
-                <h4><button class="learn">Learn more</button></h4>
+                <h4><div class="learn">Learn more -></div></h4>
                 </div>
             </section>
             <!--movers-->
@@ -77,10 +80,13 @@
                 <!--footer-->
                 <footer class="footer">
                 <div class="footer-dark">
-                    <h6 class="footer_add">Move  at  a  tap  of  a  button</h6>
-                 <div class="row">
-                        <div class="row item social"><a href="#"><i class="icon ion-social-facebook"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-instagram"></i></a>
+                <h6 class="footer_add">Move  at  a  tap  of<span style="color:orange";>  a button</span></h6>
                         </div>
+                 </div>
+                 <div class="icons">
+                    <a href="#" class="fa fa-facebook"></a>  
+                    <a href="#" class="fa fa-twitter"></a> 
+                    <a href="#" class="fa fa-instagram"></a> 
                  </div>
                  <ul class="footer_nav">
                      <li class="nav_item">
