--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </div>
         </nav>
                 <div class="top">
-                    <h2>Change  is  inevitable but tasking. Find your  reliable  change  partner</h2>
-                    <p>In  one  roof, get  the  solutions to  you  house  moving  nightmares</p>
+                    <h2>Change  is  inevitable but <br>tasking.Find your <br> reliable  change  partner</h2>
+                    <p>In  one  roof, get  the  solutions to<br>  you  house  moving  nightmares</p>
                 </div>
             </section>
             <!--hustle motiv-->
