creates a div to flex the child of the div container

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             </section>
             <!--hustle motiv-->
             <section id="hustle">
+                <div class="worker">
                 <div class="chair">
                     <img src="./Project Assets/moving2 1.png" width="600" alt="the image">
                 </div>
@@ -41,6 +42,7 @@
                     <h3>Cut the hustle</h3>
                     <p>In  this  current tough  economic situations, living is  already a  hustle. Why then should you  worry  about how  you  should  move to  live  better</p> 
                 <h4><div class="learn">Learn more -></div></h4>
+                </div>
                 </div>
             </section>
             <!--movers-->
