--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="motiv">
                     <h3>Cut the hustle</h3>
-                    <p>In  this  current tough  economic situations, living is  already a  hustle. Why then should you  worry  about how  you  should  move to  live  better</p> 
+                    <p>In  this  current tough  economic situations, <br>living is  already a  hustle. Why then should<br> you  worry  about how  you  should  move to<br>  live  better</p> 
                 <h4><div class="learn">Learn more -></div></h4>
                 </div>
                 </div>
