--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                     <img src="./Project Assets/moving2 1.png" width="500" alt="the image">
                 </div>
                 <div class="motiv">
+                <hr>
                     <h3>Cut the hustle</h3>
                     <p>In  this  current tough  economic situations, <br>living is  already a  hustle. Why then should<br> you  worry  about how  you  should  move to<br>  live  better</p> 
-                <h4><div class="learn">Learn more -></div></h4>
+                <h4>Learn more -></h4>
                 </div>
                 </div>
             </section>
