adds button to the webpage

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <hr>
                     <h3>Cut the hustle</h3>
                     <p>In  this  current tough  economic situations, <br>living is  already a  hustle. Why then should<br> you  worry  about how  you  should  move to<br>  live  better</p> 
-                <h4>Learn more -></h4>
+                <button type="button">Learn more -></button>
                 </div>
                 </div>
             </section>
