styles the nav bar section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <section id="header">
                        <!--Navigation-->
         <nav>
-            <div class="logo">
                 <ul>
                     <li>Home</li>
                     <li>About us</li>
@@ -22,16 +21,16 @@
                         <a  href="./Project Assets/pages/index.html">movers</a>
                     </li>
                     <li>Contact us</li>
-                    <li><div class="sub"><span style="color:black;">Login</span></div></li>
-                    <li><div class="log-key"><span style="color:yellow;">Login</span></div></li>
+                    <li><span style="color:black;">Login</span></li>
+                    <li><span style="color:yellow;">Login</span></li>
                 </ul>
-            </div>
         </nav>
                 <div class="top">
                     <h2>Change  is  inevitable but <br>tasking.Find your <br> reliable  change  partner</h2>
                     <p>In  one  roof, get  the  solutions to<br>  you  house  moving  nightmares</p>
                 </div>
             </section>
+            <br><br>
             <!--hustle motiv-->
             <section id="hustle">
                 <div class="worker">
