--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                         <a  href="./Project Assets/pages/index.html">movers</a>
                     </li>
                     <li>Contact us</li>
-                    <li><span style="color:black;">Login</span></li>
-                    <li><span style="color:yellow;">Login</span></li>
+                    <li><button type="button" id="three">login</button></li>
+                    <li><button type="button" id="four">login</button></li>
                 </ul>
         </nav>
                 <div class="top">
@@ -41,7 +41,7 @@
                 <hr>
                     <h3>Cut the hustle</h3>
                     <p>In  this  current tough  economic situations, <br>living is  already a  hustle. Why then should<br> you  worry  about how  you  should  move to<br>  live  better</p> 
-                <button type="button">Learn more -></button>
+                <button type="button" id="one">Learn more -></button>
                 </div>
                 </div>
             </section>
