adds css styling property to page two of the web page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!--header part-->
             <section id="header">
                        <!--Navigation-->
+                       <br><br>
         <nav>
                 <ul>
                     <li>Home</li>
@@ -45,27 +46,25 @@
                 </div>
                 </div>
             </section>
-            <!--movers-->
-            <h5>Our  Top  Movers</h5>
-            <section id="movers">
-                
+            <!--movers--> 
+            <section id="movers"><br><br>
+                <h7>Our Top Movers</h7><br><br><br>
+                <div class="co-movers">
                 <div class="ehem">
                     <img src="./Project Assets/ehem 1.png" width="400" height="300" alt="the image">
-                    <div class="A+">A+ Movers</div>
+                <div class="a-mob">A+ Movers</div><br><br>
                 </div>
                 <div class="wewe">
                     <img src="./Project Assets/wewe 1.png" width="400" height="300"alt="the image">
-                    <div class="maridadi">Mridadi home  logistics</div>
+                    <div class="mari">Maridadi home  logistics</div>
                 </div>
                 <div class="mfalme">
                     <img src="./Project Assets/movers 1.png" width="400" height="300" alt="the image">
                     <div class="ufalme">Ufalme Movers</div>
                 </div>
-            </section>
-            <section id="two">
                 <div class="mchap">
                     <img src="./Project Assets/chapchap 1.png" width="400" height="300" alt="the image">
-                    <div class="Movers">Movers chap chap</div>
+                    <div class="chap">Movers chap chap</div>
                 </div>
                 <div class="songa">
                     <img src="./Project Assets/mashinani 1.png" width="400" height="300" alt="the image">
@@ -75,52 +74,53 @@
                     <img src="./Project Assets/songa 1.png" width="400" height="300" alt="the image">
                     <div class="upesi">Upesi logistics</div>
                 </div>
+        </div>
             </section>
             <!--tap-->
             <section id="tap">
                 
                 <!--footer-->
                 <footer class="footer">
-                <div class="footer-dark">
-                <h6 class="footer_add">Move  at  a  tap  of<span style="color:orange";>  a button</span></h6>
+                    <div class="footer-dark">
+                    <h6 class="footer_add">Move  at  a  tap  of<span style="color:orange";>&nbsp a button</span></h6>
+                            </div>
+                     </div>
+                     <div class="icons">
+                        <a href="#" class="fa fa-facebook"></a>  
+                        <a href="#" class="fa fa-twitter"></a> 
+                        <a href="#" class="fa fa-instagram"></a> 
+                     </div>
+                     <ul class="footer_nav">
+                         <li class="nav_item">
+                             <h8 class="nav_title">column  heading</h8>
+                             <ul class="nav_ul">
+                                 <li><a href="#">link goes  here</a></li>
+                                 <li><a href="#">link goes  here</a></li>
+                                 <li><a href="#">link goes  here</a></li>
+                                 <li><a href="#">link goes  here</a></li>
+                             </ul>
+                         </li>
+                         <li class="nav_item nav_item--extra">
+                            <h8 class="nav_title">column  heading</h8>
+                            <ul class="nav_ul nav_ul--extra">
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav_item">
+                            <h8 class="nav_title">column  heading</h8>
+                            <ul class="nav_ul">
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes  here</a></li>
+                            </ul>
+                        </li>
+                     </ul>
+                     </div>
                         </div>
-                 </div>
-                 <div class="icons">
-                    <a href="#" class="fa fa-facebook"></a>  
-                    <a href="#" class="fa fa-twitter"></a> 
-                    <a href="#" class="fa fa-instagram"></a> 
-                 </div>
-                 <ul class="footer_nav">
-                     <li class="nav_item">
-                         <h8 class="nav_title">column  heading</h8>
-                         <ul class="nav_ul">
-                             <li><a href="#">link goes  here</a></li>
-                             <li><a href="#">link goes  here</a></li>
-                             <li><a href="#">link goes  here</a></li>
-                             <li><a href="#">link goes  here</a></li>
-                         </ul>
-                     </li>
-                     <li class="nav_item nav_item--extra">
-                        <h8 class="nav_title">column  heading</h8>
-                        <ul class="nav_ul nav_ul--extra">
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav_item">
-                        <h8 class="nav_title">column  heading</h8>
-                        <ul class="nav_ul">
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                            <li><a href="#">link goes  here</a></li>
-                        </ul>
-                    </li>
-                 </ul>
-                 </div>
-                    </div>
-                </footer>
+                    </footer>
     </body>
 </html>
