--- a/Project Assets/pages/index.html
+++ b/Project Assets/pages/index.html
@@ -33,9 +33,8 @@
             <div class="value">
                 <ul>
                     <li><h2>$450000</h2></li>
-                </ul>
-               
                 <p4><small>$2800/sq ft</small></p4>
+                </ul>
             </div>
         </nav_2>
             </section>
@@ -185,7 +184,7 @@
     <div class="footer-dark">
         <h6 class="footer_add">Make your dreams a<span style="color:orange";> reality</span></h6>
         <div class="work">
-            <h12><span style="color:black";> Work with us-></span></h12>
+            <button type="button">Work with us</button>
         </div>
      <div class="icons">
         <a href="#" class="fa fa-facebook"></a>  
