adds icons to the footer

--- a/Project Assets/pages/index.html
+++ b/Project Assets/pages/index.html
@@ -26,15 +26,17 @@
             </div>
         </nav>
         <nav_2>
+            <div class="nav-mod">
             <div class="modern">
                 <h1>Modern House</h1>
                 <p><small>3002 Foster Ave, Brooklyn,NY 11210, USA</small></p>
             </div>
             <div class="value">
                 <ul>
-                    <li><h2>$450000</h2></li>
+                    <h2>$450000</h2>
                 <p4><small>$2800/sq ft</small></p4>
                 </ul>
+            </div>
             </div>
         </nav_2>
             </section>
