--- a/index.html
+++ b/index.html
@@ -77,15 +77,11 @@
         </div>
             </section>
             <!--tap-->
+
             <section id="tap">
-                
-                <!--footer-->
                 <footer class="footer">
                     <div class="footer-dark">
-                    <h6 class="footer_add">Move  at  a  tap  of<span style="color:orange";>&nbsp a button</span></h6>
-                            </div>
-                     </div>
-                     <div class="icons">
+                        <h6 class="footer_add">Move at a tap of a<span style="color:orange";>&nbsp button</span></h6                     <div class="icons">
                         <a href="#" class="fa fa-facebook"></a>  
                         <a href="#" class="fa fa-twitter"></a> 
                         <a href="#" class="fa fa-instagram"></a> 
@@ -94,19 +90,19 @@
                          <li class="nav_item">
                              <h8 class="nav_title">column  heading</h8>
                              <ul class="nav_ul">
-                                 <li><a href="#">link goes  here</a></li>
-                                 <li><a href="#">link goes  here</a></li>
-                                 <li><a href="#">link goes  here</a></li>
-                                 <li><a href="#">link goes  here</a></li>
+                                 <li><a href="#">link goes here</a></li>
+                                 <li><a href="#">link goes here</a></li>
+                                 <li><a href="#">link goes here</a></li>
+                                 <li><a href="#">link goes here</a></li>
                              </ul>
                          </li>
                          <li class="nav_item nav_item--extra">
                             <h8 class="nav_title">column  heading</h8>
                             <ul class="nav_ul nav_ul--extra">
-                                <li><a href="#">link goes  here</a></li>
-                                <li><a href="#">link goes  here</a></li>
-                                <li><a href="#">link goes  here</a></li>
-                                <li><a href="#">link goes  here</a></li>
+                                <li><a href="#">link goes here</a></li>
+                                <li><a href="#">link goes here</a></li>
+                                <li><a href="#">link goes here</a></li>
+                                <li><a href="#">link goes here</a></li>
                             </ul>
                         </li>
                         <li class="nav_item">
@@ -122,5 +118,5 @@
                      </div>
                         </div>
                     </footer>
-    </body>
-</html>
+                </body>
+                </html>
